# decryptogame

./: .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
docs/: components.md  end-criteria.md  game.md  generators.md  index.md  installation.md  play.md  requirements.txt  teams.md  tutorials.md
src/decryptogame/: __init__.py  components.py  end_criteria.py  game.py  generators.py  play.py  rules.py  teams.py
src/decryptogame/official_words/: english.py  english.txt
tests/: test_components.py  test_game.py  test_generators.py
