[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decryptogame"
version = "0.0.1"
authors = [
  { name="Jaden Rodriguez", email="jadenrodriguez7@gmail.com" },
]
description = "An implementation of a Decrypto-style game"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
addopts = [
    "--import-mode=importlib",
]