[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decryptogame"
version = "1.0.1"
authors = [
  { name="Jaden Rodriguez", email="jadenrodriguez7@gmail.com" },
]
description = "A non-official implementation of a Decrypto-style game for simulation and AI work."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]

[project.urls]
"Homepage" = "https://github.com/YaBoiSkinnyP/decryptogame/"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
addopts = [
    "--import-mode=importlib",
]